<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backdesign"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceLarge"></TextView>

    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hint"
        android:textColorHint="@android:color/white"
        android:background="@drawable/edtdesign"
        android:padding="10dp"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:hint="@string/hint2"
        android:textColorHint="@android:color/white"
        android:background="@drawable/edtdesign"
        android:padding="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text"
        android:id="@+id/login_btn"
        android:textColor="@android:color/white"
        android:background="@drawable/edtdesign"
        android:textAppearance="?android:textAppearanceMedium"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text2"
        android:id="@+id/gmail_btn"
        android:textColor="@android:color/white"
        android:background="@drawable/edtdesign"
        android:textAppearance="?android:textAppearanceMedium"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text3"
        android:id="@+id/anon_btn"
        android:textColor="@android:color/white"
        android:background="@drawable/edtdesign"
        android:textAppearance="?android:textAppearanceMedium"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text1"
        android:id="@+id/facebook_btn"
        android:textColor="@android:color/white"
        android:background="@drawable/edtdesign"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:id="@+id/singup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singup"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceSmall"/>


</LinearLayout>